// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewTabLink handles children 1`] = `
<DocumentFragment>
  <mock-styledlinkbase
    classname="insights-link"
    href="test"
    target="_blank"
  >
    link text
  </mock-styledlinkbase>
</DocumentFragment>
`;

exports[`NewTabLink handles children: StyledLinkBase props 1`] = `
{
  "children": "link text",
  "className": "insights-link",
  "href": "test",
  "target": "_blank",
}
`;

exports[`NewTabLink renders content with custom className 1`] = `
<DocumentFragment>
  <mock-styledlinkbase
    classname="insights-link custom-class"
    href="test"
    target="_blank"
  />
</DocumentFragment>
`;

exports[`NewTabLink renders content with custom className: StyledLinkBase props 1`] = `
{
  "className": "insights-link custom-class",
  "href": "test",
  "target": "_blank",
}
`;

exports[`NewTabLink renders content without custom className 1`] = `
<DocumentFragment>
  <mock-styledlinkbase
    classname="insights-link"
    href="test"
    target="_blank"
  />
</DocumentFragment>
`;

exports[`NewTabLink renders content without custom className: StyledLinkBase props 1`] = `
{
  "className": "insights-link",
  "href": "test",
  "target": "_blank",
}
`;
